--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,6 @@ section {
     color: #024e76;
     padding: 20px;
     width: 40%;
-    margin: 3.5%;
 }
 
 .hero-form h3 {
@@ -141,20 +140,16 @@ section {
     font-size: 16px;
 }
 
-.intro {
-    text-align: center;
-}
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -185,10 +180,11 @@ section {
 .section-title {
     font-size:  55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -197,10 +193,6 @@ section {
 
 .secondary-border {
     border-color: #39a6b2;
-}
-
-.trainers {
-    text-align: center;
 }
 
 .trainer {
@@ -246,8 +238,11 @@ section {
     text-align: right;
 }
 
+.flex-row {
+    display: flex;
+}
+
 .contact {
-    text-align: center;
     background-color: #024e76;
 }
 
