--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -84,6 +84,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .hero-cta {
@@ -92,7 +93,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -107,6 +108,7 @@ section {
     color: #024e76;
     padding: 20px;
     width: 40%;
+    margin: 3.5%;
 }
 
 .hero-form h3 {
@@ -140,6 +142,24 @@ section {
     font-size: 16px;
 }
 
+.section-title {
+    font-size:  48px;
+    color: #024e76;
+    border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
+}
+
+.primary-border {
+    border-color: #fce138;
+}
+
+.secondary-border {
+    border-color: #39a6b2;
+}
+
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
@@ -153,25 +173,23 @@ section {
     background: #fce138;
 }
 
-.step-text {
-    flex: 12;
+.step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+
 }
+
 
 .step h3 {
     color: #024e76;
     font-size: 46px;
     flex: 1 30%;
-}
-
-.step-text p {
-    color: #39a6b2;
-    font-size: 18px;
-}
-
-.step-text h4 {
-    font-size: 26px;
-    line-height: 1.5;
-    color: #024e76;
 }
 
 .step-info {
@@ -190,34 +208,19 @@ section {
     max-width: 100%;
 }
 
-.step {
-    margin: 50px auto;
-    padding-bottom: 50px;
-    width: 80%;
-    border-bottom: 1px solid #39a6b2;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-
+.step-text {
+    flex: 12;
 }
 
-.section-title {
-    font-size:  55px;
+.step-text p {
+    color: #39a6b2;
+    font-size: 18px;
+}
+
+.step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
     color: #024e76;
-    border-bottom: 3px solid;
-    padding-bottom: 20px;
-    text-align: center;
-    margin: 0 auto 35px auto;
-    width: 50%;
-}
-
-.primary-border {
-    border-color: #fce138;
-}
-
-.secondary-border {
-    border-color: #39a6b2;
 }
 
 .trainers {
@@ -258,12 +261,12 @@ section {
     font-size: 17px;
 }
 
-.flex-row {
-    display: flex;
-}
-
 .contact {
     background-color: #024e76;
+}
+
+.contact h2 {
+    color: #fce138;
 }
 
 .contact-info {
@@ -275,10 +278,6 @@ section {
 .contact-info > * {
     flex: 1;
     margin: 15px;
-}
-
-.contact h2 {
-    color: #fce138;
 }
 
 .contact-info iframe {
@@ -301,9 +300,6 @@ section {
     font-style: normal;
 }
 
-.contact-info a {
-    color: #fce138;
-}
 
 .contact-form input, .contact-form textarea {
     border: 1px solid #024e76;
@@ -324,4 +320,34 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+}
+.contact-info a {
+    color: #fce138;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.flex-row {
+    display: flex;
+}
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+    
+}
+
+/*MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width: 768px) {
+    
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+    
 }
