--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,11 +12,18 @@ body {
 
 /* apply styles to <header> */
 header {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
     padding: 20px 35px;
     background-color: #39a6b2;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    background-image: url('../images/hero-bg.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 header h1 {
@@ -51,6 +58,13 @@ header nav ul li a {
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+}
+
 footer {
     background: #fce138;
     width: 100%;
@@ -82,7 +96,8 @@ section {
 .hero {
     background-image: url('../images/hero-bg.jpg');
     background-size: cover;
-    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -134,6 +149,12 @@ section {
     width: 100%;
     margin-bottom: 15px;
     border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.75);
+}
+
+.form-input:focus {
+    background-color: rgba(255, 255, 255, 1);
+    outline: none;
 }
 
 .hero-form label {
@@ -147,6 +168,10 @@ section {
     padding: 10px 20px;
     font-size: 16px;
     border-radius: 10px;
+}
+
+.hero-form button:hover {
+    background-color: #39a6b2;
 }
 
 .section-title {
@@ -184,12 +209,11 @@ section {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-
+    border-bottom: 1px solid #39a6b2;
 }
 
 
@@ -228,6 +252,10 @@ section {
     font-size: 26px;
     line-height: 1.5;
     color: #024e76;
+}
+
+.step:last-child {
+    border-bottom: none;
 }
 
 .trainers {
@@ -318,6 +346,12 @@ section {
     margin-bottom: 15px;
     margin-top: 5px;
     border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.75);
+}
+
+.contact-form input:focus, .contact-form textarea:focus{
+    background-color: rgba(255, 255, 255, 1);
+    outline: none;
 }
 
 .contact-form button {
@@ -330,6 +364,12 @@ section {
     font-size: 16px;
     border-radius: 10px;
 }
+
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
+}
+
 .contact-info a {
     color: #fce138;
 }
@@ -351,6 +391,7 @@ section {
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
     }
 
     header h1 {
